// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Page Continue as Guest button should not show guest button when application login code = '' and enabled = 'false' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Continue as Guest button should not show guest button when application login code = '' and enabled = 'true' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Continue as Guest button should not show guest button when application login code = 'bar' and enabled = 'true' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Continue as Guest button should show guest button when application login code is set and enabled 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
        <div
          class="MuiBox-root css-n085to"
        >
          <div
            aria-orientation="horizontal"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
            data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
            role="separator"
          >
            <span
              class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
              >
                or
              </h6>
            </span>
          </div>
          <a
            aria-disabled="false"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
            data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          >
            Continue as Guest
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Register button should not show register link when registration is disabled and application default registration code is '' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <div
          class="MuiBox-root css-n085to"
        >
          <div
            aria-orientation="horizontal"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
            data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
            role="separator"
          >
            <span
              class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
              >
                or
              </h6>
            </span>
          </div>
          <a
            aria-disabled="false"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
            data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          >
            Continue as Guest
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Register button should not show register link when registration is disabled and application default registration code is 'register-code-provided' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <div
          class="MuiBox-root css-n085to"
        >
          <div
            aria-orientation="horizontal"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
            data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
            role="separator"
          >
            <span
              class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
              >
                or
              </h6>
            </span>
          </div>
          <a
            aria-disabled="false"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
            data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          >
            Continue as Guest
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Register button should show register link when registration is enabled and application default registration code is '' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
        <div
          class="MuiBox-root css-n085to"
        >
          <div
            aria-orientation="horizontal"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
            data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
            role="separator"
          >
            <span
              class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
              >
                or
              </h6>
            </span>
          </div>
          <a
            aria-disabled="false"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
            data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          >
            Continue as Guest
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page Register button should show register link when registration is enabled and application default registration code is 'register-code-provided' 1`] = `
<div>
  <div
    class="MuiBox-root css-6gpkta"
    data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-0"
      data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
    >
      <div
        class="MuiBox-root css-1a36uf9"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
          >
            Welcome to mockProduct!
          </h3>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
          >
            Discover your Full Potential
          </h5>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Login
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
          data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          tabindex="0"
          type="button"
        >
          Register
        </button>
        <div
          class="MuiBox-root css-n085to"
        >
          <div
            aria-orientation="horizontal"
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
            data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
            role="separator"
          >
            <span
              class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
              >
                or
              </h6>
            </span>
          </div>
          <a
            aria-disabled="false"
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
            data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          >
            Continue as Guest
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Page should render landing page successfully 1`] = `
<div
  class="MuiBox-root css-6gpkta"
  data-testid="landing-dialog-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
>
  <div
    class="MuiBox-root css-0"
    data-testid="landing-dialog-content-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
  >
    <div
      class="MuiBox-root css-1a36uf9"
    >
      <div
        class="MuiBox-root css-0"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-1xwepto-MuiTypography-root"
        >
          Welcome to mockProduct!
        </h3>
        <h5
          class="MuiTypography-root MuiTypography-h5 css-1s13cad-MuiTypography-root"
        >
          Discover your Full Potential
        </h5>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedBrandAction MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-3i7nh4-MuiButtonBase-root-MuiButton-root"
        data-testid="landing-login-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
        tabindex="0"
        type="button"
      >
        Login
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedBrandAction MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorBrandAction MuiButton-disableElevation MuiButton-fullWidth css-16s3isr-MuiButtonBase-root-MuiButton-root"
        data-testid="landing-signup-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
        tabindex="0"
        type="button"
      >
        Register
      </button>
      <div
        class="MuiBox-root css-n085to"
      >
        <div
          aria-orientation="horizontal"
          class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-10fz4te-MuiDivider-root"
          data-testid="landing-divider-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
          role="separator"
        >
          <span
            class="MuiDivider-wrapper css-ev540k-MuiDivider-wrapper"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-lvh0bk-MuiTypography-root"
            >
              or
            </h6>
          </span>
        </div>
        <a
          aria-disabled="false"
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-t35i0w-MuiTypography-root-MuiLink-root"
          data-testid="landing-continue-as-guest-button-e9c346bb-bcc6-4aaa-aaa9-d24d09274925"
        >
          Continue as Guest
        </a>
      </div>
    </div>
  </div>
</div>
`;
